--- a/eQueue/eQueue-war/web/analyticsPage.xhtml
+++ b/eQueue/eQueue-war/web/analyticsPage.xhtml
@@ -13,7 +13,7 @@
             }
         </style>
         <p:layout>
-            <p:layoutUnit minSize="400" position="west"  header="Filter" collapsible="true">
+            <p:layoutUnit minSize="400" position="west"  header="Filter" collapsible="false">
 
                 <h:panelGrid style="margin-bottom:10px" cellpadding="3">
 
@@ -56,7 +56,7 @@
                             <br/>
                             <div style="display: flex; align-items: baseline">
                                 <p:row rendered="#{analyticsPageManagedBean.optionMenuItemsType == 'SINGLE'}" >
-                                    <h:outputLabel for="menuItemSelection" value="Choose Menu Item:" />
+                                    <h:outputLabel for="menuItemSelection" value="Choose Menu Item: " />
                                     <p:selectOneMenu id="menuItemSelection" value="#{analyticsPageManagedBean.selectedMenuItemId}" label="MenuItem"
                                                      filter="true" filterMatchMode="contains" style="width:160px" panelStyle="width:180px">
                                         <f:selectItems value="#{analyticsPageManagedBean.menuItems}" var="menuItem" itemValue="#{menuItem.menuItemId}" itemLabel="#{menuItem.menuItemName}"/>
@@ -105,7 +105,9 @@
 
             #{analyticsPageManagedBean.initialized}
             <p:layoutUnit position="center" >
+
                 <h:form id="charts">
+
                     <ui:fragment rendered="#{!analyticsPageManagedBean.initialized}">
                         <h3 style="margin-left: 30px">Please select the data you wish to display</h3>
                     </ui:fragment>
