--- a/eQueue/eQueue-war/web/kitchenManagement.xhtml
+++ b/eQueue/eQueue-war/web/kitchenManagement.xhtml
@@ -13,6 +13,11 @@
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
         <h:outputStylesheet library="css" name="default.css" />
         <style type="text/css">
+            
+            .ui-button {
+                background-color: pink;
+            }
+            
             .ui-datagrid-header {
                 font-size: medium;
             }
@@ -56,7 +61,7 @@
                         </f:facet>
                         <p:row>
                             <p:column colspan="2">
-                                <h:outputText value="Number of Ongoing Orders:" />
+                                <h:outputText value="Number of Ongoing Orders" />
                             </p:column>
                             <p:column colspan="1" style="text-align: center; font-weight: bold">
                                 <h:outputText value="#{kitchenManagementManagedBean.incompleteCustomerOrders.size()}"/>
@@ -64,7 +69,7 @@
                         </p:row>
                         <p:row>
                             <p:column colspan="2">
-                                <h:outputText value="Number of Ordered Line Items:" />
+                                <h:outputText value="Number of Ordered Line Items" />
                             </p:column>
                             <p:column colspan="1" style="text-align: center; font-weight: bold">
                                 <h:outputText value="#{kitchenManagementManagedBean.numOrdered}"/>
@@ -72,7 +77,7 @@
                         </p:row>
                         <p:row>
                             <p:column colspan="2">
-                                <h:outputText value="Number of Preparing Line Items:" />
+                                <h:outputText value="Number of Preparing Line Items" />
                             </p:column>
                             <p:column colspan="1" style="text-align: center; font-weight: bold">
                                 <h:outputText value="#{kitchenManagementManagedBean.numPreparing}"/>
