--- a/eQueue/eQueue-war/web/menuManagement.xhtml
+++ b/eQueue/eQueue-war/web/menuManagement.xhtml
@@ -52,7 +52,7 @@
                                 <f:facet name="header" >
                                     <p:outputPanel style="text-align: right;">
                                         <p:commandButton actionListener="#{menuManagementManagedBean.doCreateMenuItem}" update="menuManagementTabView:formCreateNewMenuItem" style="float: left;" value="Create New Menu Item" oncomplete="PF('dialogCreateNewMenuItem').show()" icon="fa fa-plus-circle" />
-                                        <h:outputText value="Search all fields:" />
+                                        <h:outputText value="Search all fields: " />
                                         <p:inputText id="globalFilter" onkeyup="PF('dataTableAllMenuItems').filter()" style="width:300px" placeholder="Enter keyword"/>
                                     </p:outputPanel>
                                 </f:facet>
@@ -441,7 +441,7 @@
                                 <f:facet name="header">
                                     <p:outputPanel style="text-align: right;">
                                         <p:commandButton style="float: left;" value="Create New Menu Category" onclick="PF('dialogCreateNewMenuCategory').show()" icon="fa fa-plus-circle" />
-                                        <h:outputText value="Search all fields:" />
+                                        <h:outputText value="Search all fields: " />
                                         <p:inputText id="globalFilter" onkeyup="PF('dataTableAllMenuCategories').filter()" style="width:300px" placeholder="Enter keyword"/>
                                     </p:outputPanel>
                                 </f:facet>
@@ -494,7 +494,7 @@
 
                         <h:form id="formCreateNewMenuCategory">
 
-                            <p:dialog id="dialogCreateNewMenuCategory" widgetVar="dialogCreateNewMenuCategory" header="Create New Menu Category" closable="true">
+                            <p:dialog id="dialogCreateNewMenuCategory" widgetVar="dialogCreateNewMenuCategory" header="Create New Menu Category" resizable="false" closable="true">
 
                                 <p:messages id="messagesCreateNewMenuCategory" redisplay="false" />
 
